--- a/src/assest/styles/styles.scss
+++ b/src/assest/styles/styles.scss
@@ -12,3 +12,4 @@
 // Components
 @import "components/main-header.scss";
 @import "components/cat-card.scss";
+@import "components/stay-list/stay-list.scss"
