--- a/src/assest/styles/basics/_base.scss
+++ b/src/assest/styles/basics/_base.scss
@@ -11,7 +11,7 @@
 }
 
 html {
-    font-family: montserrat, sans-serif;
+    font-family: Careallight, sans-serif;
     line-height: 2;
 }
 
@@ -24,6 +24,7 @@ img {
 }
 
 h1,h2,h3,h4,h5,h6 {
+    margin: 0;
 }
 
  
