stay-details design

--- a/src/assest/styles/styles.scss
+++ b/src/assest/styles/styles.scss
@@ -12,4 +12,7 @@
 // Components
 @import "components/main-header.scss";
 @import "components/cat-card.scss";
-@import "components/stay-list/stay-list.scss"
+@import "components/stay-list/stay-list.scss";
+
+// Pages
+@import "pages/stay-details.scss";
