--- a/src/assest/styles/setup/_variables.scss
+++ b/src/assest/styles/setup/_variables.scss
@@ -1,10 +1,11 @@
 // Colors
-$clr1: #ce2e6c;
-$clr2: #092f32;
-$clr3: #574f7d;
-$clr4: #95adbe;
-$clr5: #dff0ea;
-$clr6: #fff;
+$clr1: #FF385C;
+$clr2: #222222;
+$clr3: #717171;
+$clr4: #303030;
+$clr5: #FFFFFF;
+$clr6: #F7F7F7;
+
 
 
 // Breakpoints
