--- a/src/assest/styles/basics/_base.scss
+++ b/src/assest/styles/basics/_base.scss
@@ -1,30 +1,32 @@
 :root {
-    --clr: gold;
-  }
+  --clr: gold;
+}
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 ::selection {
-  
 }
 
 html {
-    font-family: Careallight, sans-serif;
-    line-height: 2;
+  font-family: f-light, sans-serif;
+  line-height: 2;
 }
 
 body {
-    margin: 0;
+  margin: 0;
 }
 
 img {
-    width: 100%;
+  width: 100%;
 }
 
-h1,h2,h3,h4,h5,h6 {
-    margin: 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
 }
-
- 
