--- a/src/assest/styles/pages/_stay-details.scss
+++ b/src/assest/styles/pages/_stay-details.scss
@@ -23,6 +23,7 @@
       }
 
       &:hover {
+        cursor: pointer;
         background-color: black;
         img {
           opacity: 0.8;
@@ -30,29 +31,76 @@
       }
     }
   }
+
   .property-details {
     display: flex;
-    flex-direction: column;
-    .host-img-and-desc {
+    flex-direction: row;
+    justify-content: space-between;
+    .stay-info {
+      flex-direction: column;
       justify-content: space-between;
-      display: flex;
+      h1 {
+        font-size: rem(22px);
+        line-height: 1.1818;
+      }
     }
     .host-portrait {
       height: 56px;
       width: 56px;
       img {
-        border-radius: 150%;
+        border-radius: 50%;
       }
     }
     ul {
       display: flex;
       max-width: 350px;
-      justify-content: space-between;
+      gap: 5px;
+
+      //   justify-content: space-between;
+      padding: 0;
+      margin: 0;
+      //   line-height: 0.8;
+      line-height: 1.25;
+      li {
+      }
       //   width: 550px;
     }
   }
 }
 
+.amenities-container {
+  ul {
+    column-count: 2;
+  }
+  img {
+    width: 24px;
+    height: 24px;
+  }
+  ul li {
+    list-style-position: inside;
+    page-break-inside: avoid;
+    break-inside: avoid;
+  }
+}
+
+.summary {
+  line-height: 1.5;
+}
+
+.stay-perks {
+  border-top: 1px solid #e2e2e2;
+  border-bottom: 1px solid #e2e2e2;
+  li {
+    span {
+      font-size: rem(14px);
+      display: block;
+      &:first-child {
+        font-size: 1rem;
+        font-family: f-book;
+      }
+    }
+  }
+}
 // .order-container {
 //   border: 1px solid #00000030;
 //   border-radius: 13px;
