--- a/src/assest/styles/styles.scss
+++ b/src/assest/styles/styles.scss
@@ -10,9 +10,11 @@
 @import "basics/base.scss";
 
 // Components
-@import "components/main-header.scss";
 @import "components/cat-card.scss";
 @import "components/stay-list/stay-list.scss";
+@import "components/app-footer/app-footer.scss";
+@import "components/app-header/app-header.scss";
+@import "components/stay-map.scss";
 
 // Pages
 @import "pages/stay-details.scss";
