--- a/src/assest/styles/pages/_stay-details.scss
+++ b/src/assest/styles/pages/_stay-details.scss
@@ -48,6 +48,8 @@
       display: flex;
       max-width: 350px;
       justify-content: space-between;
+      padding:0;
+      margin:0;
       //   width: 550px;
     }
   }
