stay-list and etc

--- a/src/assest/styles/setup/_typography.scss
+++ b/src/assest/styles/setup/_typography.scss
@@ -1,24 +1,24 @@
 @font-face {
-    font-family: Carealblack;
+    font-family:f-black;
     src: url(../../font/AirbnbCerealBlack.woff);
 }
 @font-face {
-    font-family: Carealbold;
+    font-family:f-bold;
     src: url(../../font/AirbnbCerealBold.woff);
 }
 @font-face {
-    font-family: Carealbook;
+    font-family:f-book;
     src: url(../../font/AirbnbCerealBook.woff);
 }
 @font-face {
-    font-family: Carealextrabold;
+    font-family:f-extrabold;
     src: url(../../font/AirbnbCerealExtraBold.woff);
 }
 @font-face {
-    font-family: Careallight;
+    font-family:f-light;
     src: url(../../font/AirbnbCerealLight.woff);
 }
 @font-face {
-    font-family: Carealmedium;
+    font-family:f-medium;
     src: url(../../font/AirbnbCerealMedium.woff);
 }
