--- a/src/assest/styles/components/app-footer/_app-footer.scss
+++ b/src/assest/styles/components/app-footer/_app-footer.scss
@@ -1,10 +1,10 @@
 footer {
-    font-size: rem(14px);
     background-color: $clr6;
+    font-size: rem(16px);
 
     h2 {
         font-size: rem(21px);
-        padding-bottom: 1.5rem;
+        padding-bottom: 1.2rem;
     }
 
     h1 {
@@ -14,33 +14,52 @@ footer {
 
     .inspiration-container {
         padding: 48px 0px;
+
+        .inspiration {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            font-size: rem(15px);
+            line-height: 20px;
+
+            .locations-suggestions {
+                padding-top: 24px;
+            }
+        }
     }
 
-    .inspiration {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        gap: 25px;
-        line-height: 20px;
+    .inspiraton-cities {
+        color: $clr2;
+    }
+
+    .inspiraton-countries {
+        color: $clr3;
     }
 
     .footer-bottom-section {
+        background-color: $clr6;
         display: grid;
         grid-template-columns: repeat(4, 1fr);
-        font-size: rem(14px);
         padding: 48px 0px;
         border-bottom: 1px solid #e2e2e2;
         border-top: 1px solid #e2e2e2;
 
         a {
-            font-size: rem(14px);
         }
 
         ul {
             padding: 0;
+            li {
+                margin-top: 16px;
+            }
+
+            a {
+                font-size: rem(14px);
+            }
         }
 
-        h3{
+        h3 {
             font-size: rem(14px);
+            font-family: f-large;
         }
     }
 
@@ -49,9 +68,13 @@ footer {
         justify-content: space-between;
         padding: 24px 0px;
 
-        .social-media-icon,
         .language-state {
             margin: 0rem 0.3rem;
+            img {
+                width: 20px;
+                height: 20px;
+                margin: 0px 5px;
+            }
         }
 
         p {
@@ -64,6 +87,11 @@ footer {
             &:hover {
                 text-decoration: none;
             }
+        }
+
+        .social-media-icons {
+            height: 20px;
+            width: 20px;
         }
     }
 }
