--- a/src/assest/styles/basics/_base.scss
+++ b/src/assest/styles/basics/_base.scss
@@ -1,12 +1,13 @@
 :root {
-  --clr: gold;
-}
+    --clr: gold;
+  }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 ::selection {
+  
 }
 
 html {
@@ -14,18 +15,15 @@ html {
 }
 
 body {
-  margin: 0;
+    margin: 0;
 }
 
 img {
-  width: 100%;
+    width: 100%;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0;
+h1,h2,h3,h4,h5,h6 {
+    margin: 0;
 }
+
+ 
