header design and date-range-component

--- a/src/assest/styles/styles.scss
+++ b/src/assest/styles/styles.scss
@@ -15,6 +15,7 @@
 @import "components/app-footer/app-footer.scss";
 @import "components/app-header/app-header.scss";
 @import "components/stay-map.scss";
+@import "components/date-range/date-range";
 
 // Pages
 @import "pages/stay-details.scss";
