--- a/src/assest/styles/components/app-footer/_app-footer.scss
+++ b/src/assest/styles/components/app-footer/_app-footer.scss
@@ -43,9 +43,6 @@ footer {
         border-bottom: 1px solid #e2e2e2;
         border-top: 1px solid #e2e2e2;
 
-        a {
-        }
-
         ul {
             padding: 0;
             li {
@@ -59,7 +56,7 @@ footer {
 
         h3 {
             font-size: rem(14px);
-            font-family: f-large;
+            font-family: f-bold;
         }
     }
 
