--- a/src/assest/styles/components/stay-app/_stay-list.scss
+++ b/src/assest/styles/components/stay-app/_stay-list.scss
@@ -1,9 +1,9 @@
 .stay-list {
     display: grid;
     grid-auto-flow: dense;
-    grid-template-columns: repeat(auto-fill, minmax(365px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(275px, 1fr));
     gap: 20px;
-    row-gap: 50px;
+    // row-gap: 50pxg\;
     
 
   
