--- a/src/assest/styles/components/stay-app/_stay-preview.scss
+++ b/src/assest/styles/components/stay-app/_stay-preview.scss
@@ -1,31 +1,80 @@
 .stay-preview {
     // @include aspect-ratio(1,1);
+
     aspect-ratio: 1;
-    display: flex;
-    flex-direction: column;
     text-decoration: none;
     color: inherit;
     font-size: rem(18px);
-    width: 365px;
+    // max-width: 310px;
 
-    img {
-        height: 220px;
-        border-radius: 15px;
-    }
+    .stay-card {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
 
-    .stay-preview-info{
-        h1{
-            font-size: rem(18px);
-        }
+        .slider {
+            flex-grow: 1;
+            height: 0;
 
-        p{
-            span{
-                &:first-child{
-                    font-family: f-medium;
+            .slick-slider{
+                height: 100%;
+
+                .slick-list{
+                    height: 100%;
+
+                    .slick-track{
+                        height: 100%;
+
+                        .slick-slide{
+                            height: 100%;
+
+                            > div{
+                                height: 100%;
+                            }
+                        }
+                    }
                 }
+
+
             }
         }
 
+        .stay-preview-info {
+            height: 100px;
+            h1 {
+                font-size: rem(18px);
+                width: 100%;
+                text-overflow: ellipsis;
+                overflow: hidden;
+                white-space: nowrap;
+            }
+
+            p {
+                span {
+                    &:first-child {
+                        font-family: f-medium;
+                    }
+                }
+            }
+        }
+    }
+
+    img {
+        border-radius: 15px;
+        object-fit: cover;
+        height: 100%;
+    }
+
+    button{
+
         
+        &.slick-next {
+            right: 10px;
+        }
+        
+        &.slick-prev {
+            bottom: 10px;
+            color: $clr5;
+        }
     }
 }
