--- a/src/assest/styles/setup/_mixins.scss
+++ b/src/assest/styles/setup/_mixins.scss
@@ -1,37 +1,37 @@
 /* Media queries Breakpoint mixins */
 
-@mixin for-mobile-layout {
-  @media (max-width: $break-mobile) {
-    @content;
-  }
-}
+// @mixin for-mobile-layout {
+//   @media (max-width: $break-narrow) {
+//     @content;
+//   }
+// }
 
 @mixin for-narrow-layout {
-  @media (min-width: $break-narrow) {
+  @media (min-width: calc($break-narrow + 50px)) {
     @content;
   }
 }
 
 @mixin for-tablet-layout {
-  @media (min-width: $break-tablet) {
+  @media (min-width: calc($break-tablet + 50px) ) {
     @content;
   }
 }
 
 @mixin for-normal-layout {
-  @media (min-width: $break-normal) {
+  @media (min-width: calc($break-normal  + 50px)) {
     @content;
   }
 }
 
 @mixin for-large-layout {
-  @media (min-width: $break-large) {
+  @media (min-width: calc($break-large + 50px)) {
     @content;
   }
 }
 
 @mixin for-wide-layout {
-  @media (min-width: $break-wide) {
+  @media (min-width: calc($break-wide + 50px)) {
     @content;
   }
 }
