--- a/src/assest/styles/components/app-header/_app-header.scss
+++ b/src/assest/styles/components/app-header/_app-header.scss
@@ -94,6 +94,7 @@ header {
             }
 
             input {
+                width: 100%;
                 padding: 0;
                 font-family: f-light;
                 outline-style: none;
@@ -126,7 +127,7 @@ header {
                     border-radius: 1.7rem;
 
                     > div {
-                        border-right:none;
+                        border-right: none;
                     }
                 }
 
@@ -162,6 +163,8 @@ header {
                         .search-btn-img {
                             height: 20px;
                             width: 20px;
+                            filter: invert(100%) sepia(1%) saturate(0%) hue-rotate(26deg) brightness(104%)
+                                contrast(102%);
                         }
                     }
                 }
