--- a/src/assest/styles/styles.scss
+++ b/src/assest/styles/styles.scss
@@ -16,7 +16,7 @@
 @import "components/app-header/app-header.scss";
 @import "components/stay-map.scss";
 @import "components/date-range/date-range";
-@import "components/stay-details/stay-reserve.scss";
+// @import "components/stay-details/stay-reserve.scss"; 
 
 // Pages
 @import "pages/stay-details.scss";
