--- a/src/assest/styles/components/app-header/_app-header.scss
+++ b/src/assest/styles/components/app-header/_app-header.scss
@@ -1,13 +1,90 @@
 header {
     background-color: #000000;
     color: $clr5;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 176px;
     flex-direction: column;
-    align-content: center;
-    align-items: center;
+    align-items: flex-start;
     display: grid;
     grid-auto-flow: dense;
     grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
-    padding-block-end: 20px;
+    z-index: 10;
+
+    &.mini-header {
+        background-color: $clr5;
+        height: 80px;
+        padding-block-end: unset;
+        box-shadow: rgb(0 0 0 / 8%) 0px 1px 12px !important;
+
+        .logo-container {
+            h2 {
+                color: $clr1;
+            }
+
+            .logo {
+                filter: invert(56%) sepia(80%) saturate(6258%) hue-rotate(328deg) brightness(100%) contrast(103%);
+            }
+        }
+
+        .menu-wrapper {
+            border: 1px solid $clr7;
+        }
+
+        .trip-destination span {
+            display: none;
+        }
+
+        .input::placeholder {
+            font-size: rem(30px);
+        }
+
+        .trip-build-container {
+            width: 600px;
+            transform: translate(-50%, -7%) scale(0.5);
+            transition: width 0.3s, top 0.3s, transform 0.3s;
+            align-items: center;
+            justify-content: space-evenly;
+            border: 2px solid $clr7;
+
+            &:hover {
+                box-shadow: 0px 8px 7px -2px $clr7;
+            }
+
+            .trip-dates-filter {
+                display: none;
+            }
+
+            form {
+                .trip-location-selector {
+                    padding: 25px;
+                    .trip-destination input {
+                        font-size: rem(30px);
+                    }
+                }
+            }
+
+            .search-btn-container {
+                .search-btn {
+                    display: flex;
+                    padding: 22px;
+                    transform: scale(1.3);
+
+                    .img-container {
+                        margin-right: 5px;
+                    }
+                }
+            }
+        }
+        .mini-header-content{
+            font-size:rem(34px);
+            font-family: f-bold;
+            color: $clr3;
+            padding: 25px 0;
+        }
+    }
 
     .main-header {
         justify-content: space-between;
@@ -18,12 +95,13 @@ header {
         align-items: center;
 
         h2 {
-            font-size: rem(20px);
+            font-size: rem(24px);
+            font-family: f-bold;
         }
 
         .logo {
-            height: 34px;
-            margin-right: 10px;
+            height: 33px;
+            margin-right: 8px;
         }
     }
 
@@ -46,14 +124,16 @@ header {
 
         .menu-wrapper {
             height: 42px;
+            width: 77px;
             background-color: $clr5;
             line-height: 2;
             border-radius: 1.5rem;
-            padding-left: 15px;
+            padding-left: 10px;
             padding-right: 5px;
             align-items: center;
+
             .menu-icon {
-                margin-right: 15px;
+                margin-right: 10px;
                 height: 18px;
                 width: 18px;
             }
@@ -61,21 +141,26 @@ header {
     }
 
     .trip-build-container {
+        position: absolute;
+        top: 0%;
+        left: 50%;
+        transform: translate(-50%, 125%);
         margin: auto;
-        width: 850px;
         background-color: $clr5;
         flex-direction: column;
         justify-content: center;
-        border-radius: 40px;
+        border-radius: 100vw;
+        transition: width 0.3s, top 0.3s, transform 0.3s;
 
         .trip-location-selector {
             width: 270px;
             justify-content: center;
             align-items: center;
+            padding: 14px 0;
 
             &:hover {
                 background-color: $clr9;
-                border-radius: 1.7rem;
+                border-radius: 100vw;
             }
         }
 
@@ -91,6 +176,7 @@ header {
             display: flex;
             .search-input {
                 border: none;
+                font-size: rem(14px);
             }
 
             input {
@@ -124,7 +210,7 @@ header {
 
                 &:hover {
                     background-color: $clr9;
-                    border-radius: 1.7rem;
+                    border-radius: 100vw;
 
                     > div {
                         border-right: none;
@@ -145,9 +231,8 @@ header {
                 justify-content: space-between;
                 &:hover {
                     background-color: $clr9;
-                    border-radius: 1.7rem;
+                    border-radius: 100vw;
                 }
-                gap: 12px;
                 .search-btn {
                     justify-content: center;
                     align-content: center;
@@ -159,6 +244,7 @@ header {
                         height: 50px;
                         width: 50px;
                         border-radius: 50%;
+                        margin-right: 8px;
                         background-color: $clr1;
                         .search-btn-img {
                             height: 20px;
