--- a/src/assest/styles/components/stay-details/stay-reserve.scss
+++ b/src/assest/styles/components/stay-details/stay-reserve.scss
@@ -1,10 +1,13 @@
 .order-container {
-  border: 1px solid #00000030;
-  border-radius: 13px;
+  // border: 1px solid #00000030;
+  border: 1px solid $clr7;
+  border-radius: 12px;
   padding: 20px;
   width: 300px;
   margin: 0px auto 10px;
-  box-shadow: 0 0 5px 5px #00000015;
+  // box-shadow: 0 0 5px 5px #00000015;
+  box-shadow: rgb(0 0 0 / 12%) 0px 6px 16px;
+
   span {
     padding: 0 0;
     margin: 0 0;
