--- a/src/assest/styles/pages/_stay-details.scss
+++ b/src/assest/styles/pages/_stay-details.scss
@@ -80,8 +80,6 @@
             display: flex;
             max-width: 350px;
             gap: 5px;
-
-            //   justify-content: space-between;
             padding: 0;
             margin: 0;
             //   line-height: 0.8;
@@ -96,18 +94,26 @@
       .amenities-container {
         padding-top: 50px;
         border-top: 1px solid #e2e2e2;
-
+        line-height: 20px;
+        margin-block-end: 50px;
+        h1 {
+          margin-block-end: 30px;
+        }
         ul {
+          padding: 0;
           column-count: 2;
         }
         img {
           width: 24px;
           height: 24px;
+          margin-right: 15px;
         }
         ul li {
           list-style-position: inside;
           page-break-inside: avoid;
           break-inside: avoid;
+          line-height: 20px;
+          margin-block-end: 15px;
         }
       }
 
@@ -121,22 +127,40 @@
         border-bottom: 1px solid #e2e2e2;
         margin-bottom: 35px;
         ul {
+          display: flex;
+          flex-direction: column;
           padding: 0;
+          img {
+            width: 24px;
+            height: 24px;
+            margin-right: 20px;
+          }
 
           li {
             margin-bottom: 35px;
+            display: flex;
+            flex-direction: column;
             span {
+              display: flex;
+              // flex-direction: column;
               line-height: 1.429;
               color: $clr3;
               font-size: rem(14px);
               display: block;
+              margin-left: 45px;
               &:first-child {
+                margin: 0;
+                display: flex;
+                // flex-direction: column;
                 line-height: 1.25;
                 color: $clr2;
                 font-size: 1rem;
                 font-family: f-medium;
               }
             }
+          }
+          ul li {
+            line-height: 20px;
           }
         }
       }
