--- a/src/assest/styles/components/app-header/_app-header.scss
+++ b/src/assest/styles/components/app-header/_app-header.scss
@@ -25,7 +25,7 @@ header {
             }
 
             .logo {
-                filter: invert(56%) sepia(80%) saturate(6258%) hue-rotate(328deg) brightness(100%) contrast(103%);
+                color: $clr1;
             }
         }
 
@@ -45,7 +45,8 @@ header {
             width: 600px;
             transform: translate(-50%, -7%) scale(0.5);
             transition: width 0.3s, top 0.3s, transform 0.3s;
-            align-items: center;
+            box-shadow: 0 0 3px 2px $clr7;
+            padding: 0px 40px;
             justify-content: space-evenly;
             border: 2px solid $clr7;
 
@@ -78,8 +79,8 @@ header {
                 }
             }
         }
-        .mini-header-content{
-            font-size:rem(34px);
+        .mini-header-content {
+            font-size: rem(34px);
             font-family: f-bold;
             color: $clr3;
             padding: 25px 0;
@@ -100,7 +101,7 @@ header {
         }
 
         .logo {
-            height: 33px;
+            font-size: rem(34px);
             margin-right: 8px;
         }
     }
@@ -249,8 +250,8 @@ header {
                         .search-btn-img {
                             height: 20px;
                             width: 20px;
-                            filter: invert(100%) sepia(1%) saturate(0%) hue-rotate(26deg) brightness(104%)
-                                contrast(102%);
+                            filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(81deg)
+                                brightness(105%) contrast(102%);
                         }
                     }
                 }
