--- a/src/assest/styles/styles.scss
+++ b/src/assest/styles/styles.scss
@@ -14,10 +14,11 @@
 @import "components/stay-app/stay-preview.scss";
 @import "components/app-footer/app-footer.scss";
 @import "components/app-header/app-header.scss";
-@import "components/stay-map.scss";
+@import "components/stay-map/stay-map.scss";
 @import "components/date-range/date-range";
 @import "components/stay-details/stay-reserve.scss";
 @import "components/stay-app/filter-bar.scss";
+@import "components/dropdown-menu/dropdown-menu.scss";
 
 // Pages
 @import "pages/stay-details.scss";
