--- a/src/assest/styles/pages/_stay-details.scss
+++ b/src/assest/styles/pages/_stay-details.scss
@@ -50,9 +50,10 @@
   .stay-info-container {
     display: flex;
     justify-content: space-between;
-    flex-direction: row;
     .info {
-      padding-inline-end: 80px;
+      width: 0;
+      flex-grow: 2;
+      // padding-inline-end: 80px;
       flex-direction: column;
       .stay-container {
         flex-direction: column;
@@ -82,11 +83,7 @@
             gap: 5px;
             padding: 0;
             margin: 0;
-            //   line-height: 0.8;
             line-height: 1.25;
-            li {
-            }
-            //   width: 550px;
           }
         }
       }
@@ -166,11 +163,17 @@
       }
     }
 
-    .reserve {
-      position: sticky;
-      text-align: center;
-      display: flex;
-      flex-direction: column;
+    .order {
+      flex-grow: 1;
+      width: 0;
+      // padding-inline-start: 80px;
+      .reserve {
+        top: 120px;
+        position: sticky;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+      }
     }
   }
 }
