--- a/src/assest/styles/components/stay-details/stay-reserve.scss
+++ b/src/assest/styles/components/stay-details/stay-reserve.scss
@@ -26,6 +26,15 @@
   justify-content: space-between;
   width: 100%;
   margin-block-end: 30px;
+  img {
+    width: 12px;
+    height: 12px;
+    filter: invert(56%) sepia(80%) saturate(6258%) hue-rotate(328deg)
+      brightness(100%) contrast(103%);
+  }
+  .dot {
+    color: $clr2;
+  }
 }
 
 .order-data {
@@ -34,6 +43,7 @@
   margin-bottom: 15px;
 
   label {
+    text-align: left;
     font-weight: 600;
     font-size: 0.75em;
   }
@@ -81,7 +91,7 @@ span.cost {
 }
 
 span.reviews {
-  color: #00000070;
+  color: $clr2;
   font-size: 0.85em;
   text-decoration: underline;
 }
@@ -153,9 +163,19 @@ span.reviews {
 }
 
 p.footer {
-  color: gray;
+  color: $clr3;
   font-weight: 500;
   display: inline-block;
   width: 100%;
   text-align: center;
+  img {
+    height: 13px;
+    width: 14px;
+    filter: invert(49%) sepia(0%) saturate(1334%) hue-rotate(167deg)
+      brightness(88%) contrast(89%);
+    margin-inline-end: 7px;
+  }
+  a {
+    color: $clr3;
+  }
 }
