--- a/src/assest/styles/pages/_stay-details.scss
+++ b/src/assest/styles/pages/_stay-details.scss
@@ -5,12 +5,27 @@
       padding-block-end: 20px;
     }
     margin-block-end: 30px;
-    img {
-      width: 14px;
-      height: 14px;
-      filter: invert(56%) sepia(80%) saturate(6258%) hue-rotate(328deg)
-        brightness(100%) contrast(103%);
-      margin-right: 5px;
+    .stay-summary-address {
+      img {
+        width: 14px;
+        height: 14px;
+        filter: invert(56%) sepia(80%) saturate(6258%) hue-rotate(328deg)
+          brightness(100%) contrast(103%);
+        margin-right: 5px;
+      }
+    }
+    a {
+      color: $clr2;
+    }
+    .summary-share-save {
+      display: flex;
+      justify-content: space-between;
+      img {
+        width: 16px;
+        height: 16px;
+        filter: invert(34%) sepia(0%) saturate(0%) hue-rotate(110deg)
+          brightness(96%) contrast(84%);
+      }
     }
   }
 
@@ -53,7 +68,7 @@
     .info {
       width: 0;
       flex-grow: 2;
-      // padding-inline-end: 80px;
+      padding-inline-end: 80px;
       flex-direction: column;
       .stay-container {
         flex-direction: column;
@@ -120,6 +135,7 @@
       }
 
       .stay-perks {
+        margin-bottom: 35px;
         border-top: 1px solid #e2e2e2;
         border-bottom: 1px solid #e2e2e2;
         margin-bottom: 35px;
@@ -134,11 +150,12 @@
           }
 
           li {
-            margin-bottom: 35px;
+            // margin-bottom: 35px;
             display: flex;
             flex-direction: column;
+            margin-block-end: 10px;
             span {
-              display: flex;
+              // display: flex;
               // flex-direction: column;
               line-height: 1.429;
               color: $clr3;
@@ -147,6 +164,7 @@
               margin-left: 45px;
               &:first-child {
                 margin: 0;
+                margin-top: 15px;
                 display: flex;
                 // flex-direction: column;
                 line-height: 1.25;
@@ -154,6 +172,9 @@
                 font-size: 1rem;
                 font-family: f-medium;
               }
+            }
+            &:last-child {
+              margin-block-end: 15px;
             }
           }
           ul li {
