--- a/src/assest/styles/styles.scss
+++ b/src/assest/styles/styles.scss
@@ -19,6 +19,7 @@
 @import "components/stay-details/stay-reserve.scss";
 @import "components/stay-app/filter-bar.scss";
 @import "components/dropdown-menu/dropdown-menu.scss";
+@import "components/app-login/app-login.scss";
 
 // Pages
 @import "pages/stay-details.scss";
