--- a/src/assest/styles/components/app-header/_app-header.scss
+++ b/src/assest/styles/components/app-header/_app-header.scss
@@ -1,23 +1,32 @@
 header {
-    background-color: #000000;
-    color: $clr5;
+    display: grid;
+    grid-auto-flow: dense;
+    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
     position: fixed;
+    flex-direction: column;
+    align-items: flex-start;
+    background-color: $clr5;
+    color: $clr5;
     top: 0;
     left: 0;
     width: 100vw;
     height: 176px;
-    flex-direction: column;
-    align-items: flex-start;
-    display: grid;
-    grid-auto-flow: dense;
-    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
-    z-index: 10;
+    z-index: 100;
 
+    &.home-page {
+        background-color: black;
+    }
+
+    // MINI HEADER
     &.mini-header {
         background-color: $clr5;
         height: 80px;
         padding-block-end: unset;
         box-shadow: rgb(0 0 0 / 8%) 0px 1px 12px !important;
+
+        .menu-actions a {
+            color: $clr2;
+        }
 
         .logo-container {
             h2 {
@@ -43,10 +52,10 @@ header {
 
         .trip-build-container {
             width: 600px;
-            transform: translate(-50%, -7%) scale(0.5);
-            transition: width 0.3s, top 0.3s, transform 0.3s;
+            transform: translate(-50%, -9%) scale(0.5);
+            transition: width 0.15s, top 0.15s, transform 0.15s;
             box-shadow: 0 0 3px 2px $clr7;
-            padding: 0px 40px;
+            padding: 0px 20px;
             justify-content: space-evenly;
             border: 2px solid $clr7;
 
@@ -66,24 +75,32 @@ header {
                     }
                 }
             }
+        }
 
-            .search-btn-container {
-                .search-btn {
-                    display: flex;
-                    padding: 22px;
-                    transform: scale(1.3);
-
-                    .img-container {
-                        margin-right: 5px;
+        .mini-header-filter {
+            justify-content: space-between;
+            align-items: center;
+            .search-img-btn {
+                height: 67px;
+                width: 67px;
+                border-radius: 50%;
+                background-color: $clr1;
+                align-items: center;
+                justify-content: center;
+                .img-container {
+                    img {
+                        height: 28px;
+                        filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(81deg)
+                            brightness(105%) contrast(102%);
                     }
                 }
             }
-        }
-        .mini-header-content {
-            font-size: rem(34px);
-            font-family: f-bold;
-            color: $clr3;
-            padding: 25px 0;
+
+            .mini-header-content {
+                color: $clr2;
+                font-size: rem(34px);
+                padding: 25px 10px;
+            }
         }
     }
 
@@ -129,9 +146,8 @@ header {
             background-color: $clr5;
             line-height: 2;
             border-radius: 1.5rem;
-            padding-left: 10px;
-            padding-right: 5px;
             align-items: center;
+            justify-content: center;
 
             .menu-icon {
                 margin-right: 10px;
@@ -163,6 +179,13 @@ header {
                 background-color: $clr9;
                 border-radius: 100vw;
             }
+
+            // .trip-location-selector::after {
+            //     background-clip: padding-box;
+            //     border: 1px solid $clr5;
+            //     content: "";
+            //     box-shadow: rgb(0 0 0 / 20%) 0px 6px 20px;
+            // }
         }
 
         .trip-destination {
@@ -170,7 +193,7 @@ header {
             padding: 0px;
             color: $clr2;
             font-family: f-medium;
-            font-size: rem(14px);
+            font-size: rem(12px);
         }
 
         form {
@@ -226,6 +249,7 @@ header {
 
                 :not(:last-child) {
                     width: 170px;
+                    font-size: rem(12px);
                 }
             }
             .search-btn-container {
@@ -239,17 +263,16 @@ header {
                     align-content: center;
                     align-items: center;
                     .img-container {
-                        align-content: center;
                         align-items: center;
                         justify-content: center;
-                        height: 50px;
-                        width: 50px;
+                        height: 47px;
+                        width: 47px;
                         border-radius: 50%;
                         margin-right: 8px;
                         background-color: $clr1;
                         .search-btn-img {
-                            height: 20px;
-                            width: 20px;
+                            height: 15px;
+                            width: 15px;
                             filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(81deg)
                                 brightness(105%) contrast(102%);
                         }
