--- a/src/assest/styles/components/app-header/_app-header.scss
+++ b/src/assest/styles/components/app-header/_app-header.scss
@@ -126,6 +126,7 @@ header {
     .menu-actions {
         gap: 20px;
         padding: 20px 0px;
+        position: relative;
 
         a {
             display: flex;
