--- a/src/assest/styles/components/stay-app/_price-modal.scss
+++ b/src/assest/styles/components/stay-app/_price-modal.scss
@@ -39,6 +39,7 @@
             height: 100%;
             display: flex;
             align-items: center;
+            cursor: pointer;
 
             &:hover{
                 background: rgb(247, 247, 247)
@@ -52,6 +53,7 @@
             border-radius: 8px;
             font-family: f-medium;
             font-size: rem(14px);
+            cursor: pointer;
         }
     }
 }
