--- a/src/assest/styles/styles.scss
+++ b/src/assest/styles/styles.scss
@@ -22,6 +22,9 @@
 @import "components/stay-app/type-of-place.scss";
 @import "components/stay-app/price-modal.scss";
 @import "components/app-login/app-login.scss";
+@import "components/guests-modal/guests-modal.scss";
 
 // Pages
 @import "pages/stay-details.scss";
+@import "pages/home-page.scss";
+
