--- a/src/assest/styles/components/app-login/app-login.scss
+++ b/src/assest/styles/components/app-login/app-login.scss
@@ -60,14 +60,73 @@
                         padding: 20px 0px;
                     }
                 }
-            }
-            .social-login-container {
-                justify-content: center;
+
+                .login-content {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    width: 100%;
+
+                    .login-form-input {
+                        border: 1px solid $clr12;
+                        width: 455px;
+                        height: 20px;
+                        padding: 26px 36px;
+
+                        &:first-child {
+                            border-radius: 10px 10px 0px 0px;
+                        }
+                        &:last-child {
+                            border-radius: 0 0 10px 10px;
+                        }
+                    }
+                }
+
+                .social-login-container {
+                    justify-content: center;
+                }
+
+                .social-login-btns-container {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 10px;
+                }
                 span {
                     text-decoration: none;
                     font-family: f-medium;
                     color: $clr2;
                     font-size: rem(12px);
+                }
+            }
+
+            .social-btn {
+                display: flex;
+                justify-content: space-between;
+                border: 2px solid $clr8;
+                border-radius: 10px;
+                padding: 10px 12px;
+
+                h4 {
+                    font-family: f-light;
+                    color: $clr2;
+                    font-size: rem(14px);
+                }
+
+                .social-media-icon {
+                    height: 20px;
+                    height: 20px;
+                }
+
+                .facebook {
+                    color: #1b74e4;
+                }
+
+                .google {
+                    color: red;
+                }
+
+                .apple {
+                    color: grey;
                 }
             }
         }
@@ -76,29 +135,5 @@
             text-decoration: underline;
             font-family: f-bold;
         }
-
-        .login-content {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: 100%;
-
-            .login-form-input {
-                border: 1px solid $clr12;
-                width: 455px;
-                height: 20px;
-                padding: 26px 36px;
-
-                &:first-child {
-                    border-radius: 10px 10px 0px 0px;
-                }
-                &:last-child {
-                    border-radius: 0 0 10px 10px;
-                }
-            }
-        }
-    }
-    .social-login-btns-container {
-        flex-direction: column;
     }
 }
