front end for backend wiring

--- a/src/assest/styles/components/stay-details/stay-reserve.scss
+++ b/src/assest/styles/components/stay-details/stay-reserve.scss
@@ -117,6 +117,13 @@ span.reviews {
       --positionY: #{$i};
     }
   }
+  &.disabled {
+    pointer-events: none;
+    .content {
+      background-image: unset;
+      background-color: gray !important;
+    }
+  }
 }
 
 .cell {
