--- a/src/assest/styles/basics/_layout.scss
+++ b/src/assest/styles/basics/_layout.scss
@@ -6,9 +6,9 @@
         grid-column: 2;
     }
 
-    // > *.full {
-    //     grid-column: 1 / -1;
-    // }
+    > .full {
+        grid-column: 1 / -1;
+    }
 
     //     $break-mobile: 400px;
     // $break-narrow: 560px;
@@ -53,6 +53,9 @@
 // }
 
 .page {
-    margin: 190px 0 80px;
+    margin: 176px 0 80px;
     min-height: 70vh;
+    &.home-page {
+        margin: unset;
+    }
 }
