--- a/src/assest/styles/pages/_home-page.scss
+++ b/src/assest/styles/pages/_home-page.scss
@@ -1,19 +1,53 @@
 // HOME PAGE PHOTO
 // https://a0.muscache.com/im/pictures/53e51dcb-8fad-4ce8-b61c-8a7a369267bf.jpg?im_q=highq&im_w=1920
-
-.home {
-    background-color: $clr10;
-}
-.upper-fold {
-    .main-pic-container {
-        margin: auto;
-        display: flex;
-        height: 100vh;
-        background-color: $clr10;
-        border-radius: 20px;
-
+.home-page {
+    .hero-container {
+        position: relative;
+        // overflow: hidden;
+        max-height: 80vh;
         img {
-            border-radius: 20px;
+            height: 100%;
+            object-fit: cover;
+        }
+        p {
+            color: $clr5;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            // transform: translate(-50%,-50%);
+        }
+    }
+
+    .top-rated {
+        padding-block-start: 50px;
+        p {
+            margin-block-end: 30px;
+            font-size: 25px;
+            font-family: f-medium;
+            letter-spacing: -0.02em;
+        }
+        .card-container {
+            display: grid;
+            grid-auto-flow: dense;
+            grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+            gap: 20px;
+
+            img {
+                height: 100%;
+                border-radius: 15px;
+                object-fit: cover;
+            }
+
+            p {
+                padding-block-start: 5px;
+                padding-inline-start: 3px;
+                font-size: 1rem;
+                font-family: f-book;
+            }
+        }
+        > div {
+            // height: 200px;
+            // width: 200px;
         }
     }
 }
