--- a/src/assest/styles/styles.scss
+++ b/src/assest/styles/styles.scss
@@ -22,9 +22,10 @@
 @import "components/stay-app/type-of-place.scss";
 @import "components/stay-app/price-modal.scss";
 @import "components/guests-modal/guests-modal.scss";
+@import "components/backoffice/stay-edit";
 
 // Pages
+
 @import "pages/stay-details.scss";
 @import "pages/home-page.scss";
 @import "pages/app-login/app-login.scss";
-
