--- a/src/assest/styles/pages/_stay-details.scss
+++ b/src/assest/styles/pages/_stay-details.scss
@@ -6,6 +6,7 @@
     }
     margin-block-end: 30px;
     .stay-summary-address {
+      justify-content: space-between;
       img {
         width: 14px;
         height: 14px;
@@ -16,9 +17,29 @@
     }
     a {
       color: $clr2;
+      margin-left: 5px;
+      margin-right: 5px;
+    }
+    span {
+      margin-left: 5px;
     }
     .summary-share-save {
       display: flex;
+      gap: 20px;
+      .summary-share {
+        display: flex;
+        align-items: center;
+        a {
+          margin: 0;
+        }
+      }
+      .summary-save {
+        display: flex;
+        align-items: center;
+        a {
+          margin: 0;
+        }
+      }
       justify-content: space-between;
       img {
         width: 16px;
